--- a/CRMPhone/MainWindow.xaml
+++ b/CRMPhone/MainWindow.xaml
@@ -184,6 +184,7 @@
                         <Button  Margin="15,3" Content="Обновить" Padding="3" Command="{Binding RefreshMeterCommand}"/>
                         <Button  Margin="15,3" Content="Удалить" Padding="3" Command="{Binding DeleteCommand}"/>
                         <Button  Margin="15,3" Content="Экспорт" Padding="3" Command="{Binding ExportMetersCommand}"/>
+                        <Button  Margin="15,3" Content="Экспортировать в файл Триц" Padding="3" Command="{Binding ExportToTrizCommand}"/>
                     </WrapPanel>
                     <DataGrid Name="MetersGrid" Grid.Row="1"
                           AutoGenerateColumns="False"
