[~] - Email + примечание у телефонов

--- a/CRMPhone/Dialogs/RequestDialog.xaml
+++ b/CRMPhone/Dialogs/RequestDialog.xaml
@@ -151,14 +151,14 @@
             <TextBlock Margin ="3" Text="Контактные телефоны:"/>
             <Button Margin ="3" Content="Добавить" Width="120" Command="{Binding AddContactCommand}" HorizontalAlignment="Left"/>
             <ListBox x:Name="ContactListBox"
-                     HorizontalAlignment="Left" 
+                     HorizontalAlignment="Left" MaxHeight="100"
                      ItemsSource="{Binding ContactList}" 
                      SelectedItem="{Binding SelectedContact}"
                      Margin="3,3,0,3">
 
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </ItemsPanelTemplate>
                 </ListBox.ItemsPanel>
                 <ListBox.ItemContainerStyle>
@@ -182,21 +182,18 @@
                     <DataTemplate>
                         <StackPanel>
                             <DockPanel>
-                                <CheckBox Margin="3" VerticalAlignment="Center" Content="Основной" IsEnabled="{Binding DataContext.CanEdit, ElementName=RequestGrid}" IsChecked="{Binding IsMain}" Command="{Binding DataContext.ChangeCheckedStateCommand, ElementName=RequestGrid}"/>
+                                <CheckBox Margin="3" VerticalAlignment="Center" Content="Осн." IsEnabled="{Binding DataContext.CanEdit, ElementName=RequestGrid}" IsChecked="{Binding IsMain}" Command="{Binding DataContext.ChangeCheckedStateCommand, ElementName=RequestGrid}"/>
                                 <TextBox Margin ="3" Width="125" Text="{Binding PhoneNumber}" IsReadOnly="{Binding DataContext.ReadOnly, ElementName=RequestGrid}"/>
+                                <CheckBox Margin="3" VerticalAlignment="Center" Content="Собств." IsEnabled="{Binding DataContext.CanEdit, ElementName=RequestGrid}" IsChecked="{Binding IsOwner}"/>
+                                <TextBlock Margin="3" VerticalAlignment="Center" Text="ФИО"/>
+                                <TextBox Margin ="3" Width="175" IsReadOnly="{Binding DataContext.ReadOnly, ElementName=RequestGrid}" HorizontalAlignment="Left" Text="{Binding Name}" />
+                                <TextBlock Margin="3" VerticalAlignment="Center" Text="e-mail"/>
+                                <TextBox Margin ="3" Width="100" IsReadOnly="{Binding DataContext.ReadOnly, ElementName=RequestGrid}" HorizontalAlignment="Left" Text="{Binding Email}" />
+                                <TextBlock Margin="3" VerticalAlignment="Center" Text="примеч."/>
+                                <TextBox Margin ="3" Width="140" IsReadOnly="{Binding DataContext.ReadOnly, ElementName=RequestGrid}" HorizontalAlignment="Left" Text="{Binding AdditionInfo}" />
                                 <Button Margin="3"  Width="32" HorizontalAlignment="Right" IsEnabled ="{Binding DataContext.CanEdit, ElementName=RequestGrid}" Command="{Binding DataContext.DeleteCommand, ElementName=RequestGrid}">
                                     <Image Source="pack://application:,,,/Images/button_delete.png" Width="16" Height="16" />
                                 </Button>
-                            </DockPanel>
-                            <DockPanel>
-                                <CheckBox Margin="3" VerticalAlignment="Center" Content="Собственник" IsEnabled="{Binding DataContext.CanEdit, ElementName=RequestGrid}" IsChecked="{Binding IsOwner}"/>
-                            </DockPanel>
-                            <DockPanel>
-                                <TextBlock Margin="3" VerticalAlignment="Center" Text="ФИО"/>
-                                <TextBox Margin ="3" Width="225" IsReadOnly="{Binding DataContext.ReadOnly, ElementName=RequestGrid}" HorizontalAlignment="Left" Text="{Binding FullName}" />
-                                <!--<TextBox Margin ="3" Width="125" IsReadOnly="{Binding DataContext.ReadOnly, ElementName=RequestGrid}" HorizontalAlignment="Right" Text="{Binding SurName}" />
-                                <TextBox Margin ="3" Width="125" IsReadOnly="{Binding DataContext.ReadOnly, ElementName=RequestGrid}" HorizontalAlignment="Right" Text="{Binding FirstName}" />
-                                <TextBox Margin ="3" Width="125" IsReadOnly="{Binding DataContext.ReadOnly, ElementName=RequestGrid}" HorizontalAlignment="Right" Text="{Binding PatrName}" />-->
                             </DockPanel>
                         </StackPanel>
                     </DataTemplate>
