[~] - Привязка мастеров к адресам и услугам

--- a/CRMPhone/Controls/Admins/WorkerAdminControl.xaml
+++ b/CRMPhone/Controls/Admins/WorkerAdminControl.xaml
@@ -15,6 +15,7 @@
         <WrapPanel Grid.Row="0">
             <Button Width="100" Margin ="5" Content="Добавить" Command="{Binding AddNewCommand}"/>
             <Button Width="100" Margin ="5" Content="Удалить" Command="{Binding DeleteCommand}"/>
+            <Button Padding="5,0" Margin ="5" Content="Адреса и Услуги" Command="{Binding HouseAndServiceCommand}"/>
         </WrapPanel>
         <DataGrid Name="ServiceCompanyGrid" Grid.Row ="1" 
                   AutoGenerateColumns="False"
